@@ -854,6 +854,8 @@ Changed in ATK 5.7
 * atkNode::editArray: fallback to postvars is only done if a field really 
   is not set in the defaults record. [Peter]
 * Fixed typo in test/class.atktestsuite.inc (bug #806) [Yury, Patrick]
+* Made multiple clicks on 'save' and 'cancel' buttons impossible by disabling
+  them after one click. [Boy]
 - Removed old treeicon code from atkTreeNode. [Guido]
 - Temporarily removed the 'generate title row' checkbox in atkExportHandler as
   it isn't yet implemented. [Guido]
